Resolved bug: "Some bus names are too wide"
Commit to resolve bug:
https://github.com/bureus/MMM-Vasttrafik-PublicTransport/issues/2

--- a/css/board.css
+++ b/css/board.css
@@ -1,9 +1,15 @@
 ﻿.departure-designation {
     border-radius: 4px;
     text-align: center;
-    width: 40px;
+    min-width: 40px;
     margin: 2px;
 }
+
+    .departure-designation span {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
 .departure-board td:nth-child(-n+2) {
     min-width: 40px !important;
 }
